--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+absl-py==0.7.1
 appnope==0.1.0
+astor==0.8.0
 backcall==0.1.0
 cycler==0.10.0
 decorator==4.4.0
+gast==0.2.2
+google-pasta==0.1.7
+grpcio==1.22.0
 h5py==2.9.0
 ipython==7.7.0
 ipython-genutils==0.2.0
@@ -11,22 +16,31 @@ Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
+Markdown==3.1.1
 nltk==3.4.4
 numpy==1.17.0
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.1.0
+profanity-check==1.0.2
 prompt-toolkit==2.0.9
+protobuf==3.9.1
 ptyprocess==0.6.0
 Pygments==2.4.2
 pyparsing==2.4.2
 python-dateutil==2.8.0
 PyYAML==5.1.2
-scikit-learn==0.21.3
+scikit-learn==0.20.2
 scipy==1.3.0
 six==1.12.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
 textgenrnn==1.5.0
 tqdm==4.32.2
 traitlets==4.3.2
 wcwidth==0.1.7
+Werkzeug==0.15.5
+wrapt==1.11.2
